--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas Odin</title>
+    <title>Pão de queijo</title>
 </head>
 <body>
-    <h1>Receitas Odin</h1>
+    <a href="../index.html">Home</a>
 
-    <a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a>
+
+    <h1>Pão de queijo mineiro</h1>
 </body>
 </html>
