Foi adicionada as listas contendo os ingredientes e os passos de preparo

--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -10,5 +10,38 @@
 
 
     <h1>Pão de queijo mineiro</h1>
+
+    <img src="../images/pao-de-queijo.jpeg" alt="Pão de queijo" height="310" width="310">
+
+    <p>Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
+
+    <p>O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã, em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
+
+    <h2>Ingredientes</h2>
+
+    <ul>
+        <li>1 xícara de chá de óleo</li>
+        <li>2 xícaras de chá de água</li>
+        <li>1 colher de sopa de sal</li>
+        <li>800 gramas de polvilho azedo</li>
+        <li>900 gramas de queijo parmesão ralado</li>
+        <li>6 ovos</li>
+    </ul>
+
+    <h2>Modo de preparo</h2>
+
+    <ol>
+        <li>Em uma panela, em fogo médio, coloque 1 xícara de óleo e 2 xícaras de água.</li>
+        <li>Acrescente 1 colher de sal.</li>
+        <li>Espere a mistura ferver, desligue o fogo e reserve.</li>
+        <li>Em um recipiente, coloque 800 gramas de polvilho azedo.</li>
+        <li>Com cuidado, adicione a mistura de água com óleo e sal da panela.</li>
+        <li>Misture os ingredientes até amornar.</li>
+        <li>Adicione 900 gramas de queijo parmesão ralado e misture.</li>
+        <li>Acrescente 6 ovos e misture bem até sentir que a massa está soltando da sua mão.</li>
+        <li>Com as mãos untadas, faça bolinhas e disponha, uma por uma na assadeira.</li>
+        <li>Leve ao forno preaquecido a 180 graus Célsius por 25 minutos.</li>
+        <li>Seu pão de queijo mineiro está pronto!</li>
+    </ol>
 </body>
 </html>
