Foi adicionado novas receitas e uma lista com o link para suas páginas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Receitas Odin</h1>
 
-    <a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a>
+    <ul>
+        <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
+        <li><a href="./recipes/bolo-cenoura.html">Bolo de cenoura</a></li>
+        <li><a href="./recipes/bolo-liquidificador.html">Bolo de liquidificador</a></li>
+    </ul>
 </body>
 </html>
