Foi adicionado arquivo de estilos e classes para alguns elementos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas Odin</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>Receitas Odin</h1>
+    <h1 class="titulo">Receitas Odin</h1>
 
     <ul>
         <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
