--- a/recipes/bolo-cenoura.html
+++ b/recipes/bolo-cenoura.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolo de cenoura</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Bolo de cenoura</h1>
+    <h1 class="nome-receita">Bolo de cenoura</h1>
 
-    <img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura">
+    <img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura" class="imagem">
 
     <p>O bolo de cenoura é uma opção simples e prática para o café da manhã, lanche da tarde ou para uma ocasião especial com famílias e amigos. Essa receita é feita no liquidificador e fica pronta em menos de 1 hora. É ideal para quando você está com pouco tempo para cozinhar.</p>
 
