--- a/recipes/bolo-liquidificador.html
+++ b/recipes/bolo-liquidificador.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolo de liquidificador</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Bolo de liquidificador</h1>
+    <h1 class="nome-receita">Bolo de liquidificador</h1>
 
-    <img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo">
+    <img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo" class="imagem">
 
     <p>O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos, açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da tarde.  </p>
 
