--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pão de queijo</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
 
 
-    <h1>Pão de queijo mineiro</h1>
+    <h1 class="nome-receita">Pão de queijo mineiro</h1>
 
-    <img src="../images/pao-de-queijo.jpeg" alt="Pão de queijo" height="310" width="310">
+    <img src="../images/pao-de-queijo.jpeg" alt="Pão de queijo" class="imagem">
 
     <p>Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
 
