As imagens foram colocadas dentro de divs e centralizadas

--- a/recipes/bolo-cenoura.html
+++ b/recipes/bolo-cenoura.html
@@ -11,7 +11,7 @@
 
     <h1 class="nome-receita">Bolo de cenoura</h1>
 
-    <img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura" class="imagem">
+    <div class="container"><img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura" class="imagem"></div>
 
     <p>O bolo de cenoura é uma opção simples e prática para o café da manhã, lanche da tarde ou para uma ocasião especial com famílias e amigos. Essa receita é feita no liquidificador e fica pronta em menos de 1 hora. É ideal para quando você está com pouco tempo para cozinhar.</p>
 
