--- a/recipes/bolo-liquidificador.html
+++ b/recipes/bolo-liquidificador.html
@@ -11,7 +11,7 @@
 
     <h1 class="nome-receita">Bolo de liquidificador</h1>
 
-    <img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo" class="imagem">
+    <div class="container"><img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo" class="imagem"></div>
 
     <p>O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos, açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da tarde.  </p>
 
