--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -12,7 +12,7 @@
 
     <h1 class="nome-receita">Pão de queijo mineiro</h1>
 
-    <img src="../images/pao-de-queijo.jpeg" alt="Pão de queijo" class="imagem">
+    <div class="container"><img src="../images/pao-de-queijo.jpeg" alt="Pão de queijo" class="imagem"></div>
 
     <p>Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
 
