Mudanças no estilo das listas e dos links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <h1 class="titulo">Receitas Odin</h1>
 
-    <ul>
-        <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
-        <li><a href="./recipes/bolo-cenoura.html">Bolo de cenoura</a></li>
-        <li><a href="./recipes/bolo-liquidificador.html">Bolo de liquidificador</a></li>
-    </ul>
+    <div class="receitas">
+        <ul class="lista-receitas">
+            <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
+            <li><a href="./recipes/bolo-cenoura.html">Bolo de cenoura</a></li>
+            <li><a href="./recipes/bolo-liquidificador.html">Bolo de liquidificador</a></li>
+        </ul>
+    </div>
 </body>
 </html>
