Os parágrafos foram envolvidos em divs

--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -14,9 +14,10 @@
 
     <div class="container"><img src="../images/pao-de-queijo.jpg" alt="Pão de queijo" class="imagem"></div>
 
-    <p>Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
-
-    <p>O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã, em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
+    <div class="paragrafos">
+        <p>Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
+        <p>O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã, em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
+    </div>
 
     <h2>Ingredientes</h2>
 
