Classes adicionadas as imagens e mudança no nome de classes

--- a/recipes/bolo-cenoura.html
+++ b/recipes/bolo-cenoura.html
@@ -11,11 +11,12 @@
 
     <h1 class="nome-receita">Bolo de cenoura</h1>
 
-    <div class="container"><img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura" class="imagem"></div>
+    <div class="container-imagem"><img src="../images/bolo-de-cenoura.png" alt="Bolo de cenoura" class="imagem"></div>
 
     <div class="paragrafos">
-        <p>O bolo de cenoura é uma opção simples e prática para o café da manhã, lanche da tarde ou para uma ocasião especial com famílias e amigos. Essa receita é feita no liquidificador e fica pronta em menos de 1 hora. É ideal para quando você está com pouco tempo para cozinhar.</p>
-        <p>Fácil de fazer, o bolo de cenoura leva ingredientes que você provavelmente tem em casa: farinha de trigo, açúcar, óleo, fermento, cenoura e ovos. Para finalizar, você pode preparar cobertura com chocolate em pó. Confira como fazer!</p>
+        <p class="texto">O bolo de cenoura é uma opção simples e prática para o café da manhã, lanche da tarde ou para uma ocasião especial com famílias e amigos. Essa receita é feita no liquidificador e fica pronta em menos de 1 hora. É ideal para quando você está com pouco tempo para cozinhar.</p>
+
+        <p class="texto">Fácil de fazer, o bolo de cenoura leva ingredientes que você provavelmente tem em casa: farinha de trigo, açúcar, óleo, fermento, cenoura e ovos. Para finalizar, você pode preparar cobertura com chocolate em pó. Confira como fazer!</p>
     </div>
 
     <h2>Ingredientes</h2>
