--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="titulo">Receitas Odin</h1>
 
-    <div class="receitas">
+    <div>
         <ul class="lista-receitas">
             <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
             <li><a href="./recipes/bolo-cenoura.html">Bolo de cenoura</a></li>
