--- a/recipes/bolo-liquidificador.html
+++ b/recipes/bolo-liquidificador.html
@@ -11,11 +11,12 @@
 
     <h1 class="nome-receita">Bolo de liquidificador</h1>
 
-    <div class="container"><img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo"></div>
+    <div class="container-imagem"><img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo" class="imagem"></div>
 
     <div class="paragrafos">
-        <p>O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos, açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da tarde.  </p>
-        <p>Depois de bater todos os ingredientes no liquidificador, basta levar o bolo para assar por 40 minutos. Confira a receita completa do bolo de liquidificador fácil e saiba como fazer em poucos minutos!</p>
+        <p class="texto">O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos, açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da tarde.  </p>
+
+        <p class="texto">Depois de bater todos os ingredientes no liquidificador, basta levar o bolo para assar por 40 minutos. Confira a receita completa do bolo de liquidificador fácil e saiba como fazer em poucos minutos!</p>
     </div>
 
     <h2>Ingredientes</h2>
