Adicionado classes aos titulos e listas

--- a/recipes/bolo-cenoura.html
+++ b/recipes/bolo-cenoura.html
@@ -19,9 +19,9 @@
         <p class="texto">Fácil de fazer, o bolo de cenoura leva ingredientes que você provavelmente tem em casa: farinha de trigo, açúcar, óleo, fermento, cenoura e ovos. Para finalizar, você pode preparar cobertura com chocolate em pó. Confira como fazer!</p>
     </div>
 
-    <h2>Ingredientes</h2>
+    <h2 class="titulo-ingredientes">Ingredientes</h2>
 
-    <ul>
+    <ul class="lista-ingredientes">
         <li>3 cenouras médias</li>
         <li>3 ovos</li>
         <li>2 xícaras de açúcar</li>
@@ -31,9 +31,9 @@
         <li>1 colher de sopa de fermento químico</li>
     </ul>
 
-    <h2>Modo de preparo</h2>
+    <h2 class="titulo-preparo">Modo de preparo</h2>
 
-    <ol>
+    <ol class="lista-preparo">
         <li>No liquidificador, coloque 3 cenouras médias, 3 ovos, 1 xícara de óleo de canola e 2 xícaras de açúcar. Bata até ficar homogêneo.</li>
         <li>Em uma tigela, coloque 2 xícaras de farinha de trigo, 1 pitada de sal e 1 colher de sopa de fermento químico. Misture.</li>
         <li>Em seguida, adicione a mistura do liquidificador na tigela.</li>
