--- a/recipes/bolo-liquidificador.html
+++ b/recipes/bolo-liquidificador.html
@@ -19,9 +19,9 @@
         <p class="texto">Depois de bater todos os ingredientes no liquidificador, basta levar o bolo para assar por 40 minutos. Confira a receita completa do bolo de liquidificador fácil e saiba como fazer em poucos minutos!</p>
     </div>
 
-    <h2>Ingredientes</h2>
+    <h2 class="titulo-ingredientes">Ingredientes</h2>
 
-    <ul>
+    <ul class="lista-ingredientes">
         <li>3 ovos</li>
         <li>2 xícaras de chá de açúcar</li>
         <li>2 colheres de sopa de margarina</li>
@@ -30,9 +30,9 @@
         <li>1 colher de sopa de fermento em pó</li>
     </ul>
 
-    <h2>Modo de preparo</h2>
+    <h2 class="titulo-preparo">Modo de preparo</h2>
 
-    <ol>
+    <ol class="lista-preparo">
         <li>No liquidificador, coloque 3 ovos, 2 xícaras de chá de açúcar e 2 colheres de sopa de margarina. Bata até ficar homogêneo.</li>
         <li>Em seguida, adicione 1 xícara de chá de leite, 2 xícaras de chá de farinha de trigo e 1 colher de sopa de fermento em pó. Bata novamente.</li>
         <li>Transfira a massa para uma forma untada e enfarinhada e leve para assar em forno preaquecido a 180 graus Celsius por 40 minutos.</li>
