--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -16,13 +16,13 @@
 
     <div class="paragrafos">
         <p class="texto">Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
-        
+
         <p class="texto">O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã, em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
     </div>
 
-    <h2>Ingredientes</h2>
+    <h2 class="titulo-ingredientes">Ingredientes</h2>
 
-    <ul>
+    <ul class="lista-ingredientes">
         <li>1 xícara de chá de óleo</li>
         <li>2 xícaras de chá de água</li>
         <li>1 colher de sopa de sal</li>
@@ -31,9 +31,9 @@
         <li>6 ovos</li>
     </ul>
 
-    <h2>Modo de preparo</h2>
+    <h2 class="titulo-preparo">Modo de preparo</h2>
 
-    <ol>
+    <ol class="lista-preparo">
         <li>Em uma panela, em fogo médio, coloque 1 xícara de óleo e 2 xícaras de água.</li>
         <li>Acrescente 1 colher de sal.</li>
         <li>Espere a mistura ferver, desligue o fogo e reserve.</li>
