--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" class="home">Home</a>
 
 
     <h1 class="nome-receita">Pão de queijo mineiro</h1>
