Added header in homepage

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas Odin</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    <h1 class="titulo">Receitas Odin</h1>
+    <div class="header">
+        <div class="start">
+            <h1 class="titulo"><a href="index.html">Receitas Odin</a></h1>
+            <ul class="nav-links">
+                <li><a href="#">link-1</a></li>
+                <li><a href="#">link-2</a></li>
+                <li><a href="#">link-3</a></li>
+            </ul>
+        </div>
+
+        <div class="end">
+            <input type="text" placeholder="Pesquisar..." class="search-bar">
+        </div>
+
+    </div>
 
     <div>
         <ul class="lista-receitas">
@@ -17,4 +33,5 @@
         </ul>
     </div>
 </body>
+
 </html>
