Added flexbox to the main page

--- a/recipes/bolo-liquidificador.html
+++ b/recipes/bolo-liquidificador.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolo de liquidificador</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
     <a href="../index.html" class="home">Home</a>
 
     <h1 class="nome-receita">Bolo de liquidificador</h1>
 
-    <div class="container-imagem"><img src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg" alt="Bolo" class="imagem"></div>
+    <div class="container-imagem"><img
+            src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg"
+            alt="Bolo" class="imagem"></div>
 
     <div class="paragrafos">
-        <p class="texto">O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos, açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da tarde.  </p>
+        <p class="texto">O bolo de liquidificador é uma receita fácil, simples e que leva apenas 6 ingredientes: ovos,
+            açúcar, farinha de trigo, fermento, leite e margarina. É uma sugestão para o café da manhã ou lanche da
+            tarde. </p>
 
-        <p class="texto">Depois de bater todos os ingredientes no liquidificador, basta levar o bolo para assar por 40 minutos. Confira a receita completa do bolo de liquidificador fácil e saiba como fazer em poucos minutos!</p>
+        <p class="texto">Depois de bater todos os ingredientes no liquidificador, basta levar o bolo para assar por 40
+            minutos. Confira a receita completa do bolo de liquidificador fácil e saiba como fazer em poucos minutos!
+        </p>
     </div>
 
     <h2 class="titulo-ingredientes">Ingredientes</h2>
@@ -33,9 +41,13 @@
     <h2 class="titulo-preparo">Modo de preparo</h2>
 
     <ol class="lista-preparo">
-        <li>No liquidificador, coloque 3 ovos, 2 xícaras de chá de açúcar e 2 colheres de sopa de margarina. Bata até ficar homogêneo.</li>
-        <li>Em seguida, adicione 1 xícara de chá de leite, 2 xícaras de chá de farinha de trigo e 1 colher de sopa de fermento em pó. Bata novamente.</li>
-        <li>Transfira a massa para uma forma untada e enfarinhada e leve para assar em forno preaquecido a 180 graus Celsius por 40 minutos.</li>
+        <li>No liquidificador, coloque 3 ovos, 2 xícaras de chá de açúcar e 2 colheres de sopa de margarina. Bata até
+            ficar homogêneo.</li>
+        <li>Em seguida, adicione 1 xícara de chá de leite, 2 xícaras de chá de farinha de trigo e 1 colher de sopa de
+            fermento em pó. Bata novamente.</li>
+        <li>Transfira a massa para uma forma untada e enfarinhada e leve para assar em forno preaquecido a 180 graus
+            Celsius por 40 minutos.</li>
     </ol>
 </body>
+
 </html>
