--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 
     </div>
 
-    <div>
+    <div class="container-receitas">
         <ul class="lista-receitas">
-            <li><a href="./recipes/pao-de-queijo.html">Pão de queijo mineiro</a></li>
-            <li><a href="./recipes/bolo-cenoura.html">Bolo de cenoura</a></li>
-            <li><a href="./recipes/bolo-liquidificador.html">Bolo de liquidificador</a></li>
+            <li><a href="./recipes/pao-de-queijo.html"><img src="./images/pao-de-queijo.jpg" alt="">Pão de queijo
+                    mineiro</a></li>
+            <li><a href="./recipes/bolo-cenoura.html"><img src="./images/bolo-de-cenoura.png" alt="">Bolo de cenoura</a>
+            </li>
+            <li><a href="./recipes/bolo-liquidificador.html"><img
+                        src="https://s2-receitas.glbimg.com/sm6kxuuihHobgyVEJ9wAZtRd1WM=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/V/Z/7jJ0zHQvqiPIKEQQxPXw/bolo-facil-de-liquidificador.jpg"
+                        alt="">Bolo de liquidificador</a></li>
         </ul>
     </div>
 </body>
