--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pão de queijo</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
     <a href="../index.html" class="home">Home</a>
 
@@ -15,9 +17,14 @@
     <div class="container-imagem"><img src="../images/pao-de-queijo.jpg" alt="Pão de queijo" class="imagem"></div>
 
     <div class="paragrafos">
-        <p class="texto">Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o passo a passo para o salgado ficar perfeito.</p>
+        <p class="texto">Clássico da gastronomia brasileira, o pão de queijo mineiro é uma receita bem fácil e simples
+            de fazer: basta você usar 6 ingredientes que você encontra em qualquer supermercado e seguir corretamente o
+            passo a passo para o salgado ficar perfeito.</p>
 
-        <p class="texto">O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã, em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
+        <p class="texto">O pão de queijo mineiro é delicioso em qualquer ocasião. Você pode servi-lo no café da manhã,
+            em um lanche da tarde, ou até em confraternização com amigos e família. O quitute é tão popular, que ele
+            também faz parte do cardápio em eventos importantes no Brasil, como as Festas Juninas. Versátil, o pão de
+            queijo ainda rende bem e leva pouco tempo para ser preparado.</p>
     </div>
 
     <h2 class="titulo-ingredientes">Ingredientes</h2>
@@ -47,4 +54,5 @@
         <li>Seu pão de queijo mineiro está pronto!</li>
     </ol>
 </body>
+
 </html>
